fix: align subfooter

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -54,7 +54,7 @@
 }
 
 .subfooter {
-    padding: 31px 60px 31px 70px;
+    padding: 30px 15%;
     background-color: #343a40;
     display: flex;
     flex-direction: row;
