--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -130,7 +130,7 @@ html {
 }
 
 .subfooter {
-  padding: 31px 60px 31px 70px;
+  padding: 30px 15%;
   background-color: #343a40;
   display: flex;
   flex-direction: row;
